# NMUFIN

./: .gitignore  No Import P&L_2025 - 2025.csv  README.md  main.py  pyproject.toml  requirements.txt
Banks Import/Alior Bank/: Alior Transactions.csv
Banks Import/Santander Bank/: Santander EUR history_2026-03-09.csv  Santander PLN history_2026-03-09.csv  Santander USD history_2026-03-09.csv
nmu_fin/: __init__.py  account_labels.py  config.py  db.py  normalization.py  parsers.py  web.py
nmu_fin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nmu_fin/services/: __init__.py  bootstrap.py  funding_case.py  fx.py  imports.py  payables.py  pnl_reports.py  reports.py  reports_balances.py  review_actions.py  review_reports.py  rules.py  settings.py  transactions.py  translation.py
nmu_fin/static/: app.css
nmu_fin/templates/: base.html  dashboard.html  funding_case.html  fx.html  import_preview.html  import_progress.html  imports.html  login.html  payables.html  review.html  settings.html  transactions.html
tests/: test_import_flow.py  test_transactions_page.py
