[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmu-fin"
version = "0.1.0"
description = "Local multi-currency finance analyzer for CSV bank imports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2.2",
  "fastapi>=0.116.1",
  "jinja2>=3.1.6",
  "pandas>=2.2.3",
  "plotly>=6.0.1",
  "python-multipart>=0.0.20",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
include = ["nmu_fin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
